# obozrenie-cpp

./: CMakeLists.txt  README.md  config.hpp.in
gtk/: CMakeLists.txt  application.cpp  application.hpp  gtk_exception_list.hpp  helpers.cpp  helpers.hpp  main.cpp  models.hpp  widgets.cpp  widgets.hpp
libobozrenie/: CMakeLists.txt  ThreadPool.hpp  backend_minetest.hpp  backend_qstat.cpp  backend_qstat.hpp  common_models.hpp  core.cpp  core.hpp  exceptions.hpp  geoip.cpp  geoip.hpp  launcher.cpp  launcher.hpp  libobozrenie.hpp  util.cpp  util.hpp  xmlpp_util.hpp
resources/: CMakeLists.txt  game_lists.json  io.obozrenie.gresource.xml  obozrenie_gtk.ui  obozrenie_gtk.ui~
